Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.028     2012-04-28 23:20:40 America/New_York

    - added 'no_bugtracker' option to omit Bugtracker, which defaults
      the bugtracker back to GithubMeta [thank you Eric Johnson]

0.027     2012-02-14 15:16:40 EST5EDT

    - add Pod::Wordlist::hanekomu as explicit prereq so I can control
      the minimum version allowed

0.026     2012-02-07 22:44:41 EST5EDT

    - bump Pod::Weaver prereq to 3.101635

0.025     2012-02-07 22:35:18 EST5EDT

    - bump MetaProvides::Package prereq to get bug fixed version of it

0.024     2012-02-02 16:26:21 EST5EDT

    - make sure t::lib::* doesn't wind up in prereqs

0.023     2011-12-30 15:29:54 EST5EDT

    - change PortabilityTests and CompileTests to the newer Test::* naming
      scheme

0.022     2011-12-13 17:26:28 EST5EDT

    - re-enable Test::PodSpelling and added own 'stopwords' option as
      passthrough and 'no_spellcheck' to disable
    - Added Test::Perl::Critic and added 'no_critic' option to disable

0.021     2011-12-07 10:49:46 EST5EDT

    - make bugtracker pod section only list web link, not email; this
      allow easier modification for use with github instead of RT which
      does not provide an email option

0.020     2011-09-23 15:11:51 America/New_York

    - added code to copy README.pod and META.json to repo directory

0.019     2011-07-18 17:23:28 America/New_York

    - added Test::Version
    - removed unused prereqs

0.018     2011-07-11 21:52:26 America/New_York

    - swapped in InsertCopyright for Prepender
    - swapped in OurPkgVersion for PkgVersion
    - removed Repository to rely soly on GithubMeta

0.017     2011-02-06 21:57:53 EST5EDT

    - added Dist::Zilla::Plugin::CheckPrereqsIndexed

0.016     2011-01-31 22:14:12 EST5EDT

    - added Pod::Weaver::Section::Support and Bugtracker to the mix

0.015     2011-01-23 17:11:20 EST5EDT

    - updated prereqs, including missing Pod::Elemental::Transformer::List
