@@ -55,7 +55,11 @@
             "Dist::Zilla::Plugin::Test::Portability" : "0",
             "Dist::Zilla::Plugin::Test::Version" : "0",
             "Dist::Zilla::PluginBundle::Filter" : "0",
+<<<<<<< HEAD
             "Dist::Zilla::PluginBundle::Git" : "0",
+=======
+            "Dist::Zilla::PluginBundle::Git" : "1.121010",
+>>>>>>> switch to Git::GatherDir
             "Dist::Zilla::Role::PluginBundle::Easy" : "0",
             "Moose" : "0.99",
             "Moose::Autobox" : "0",
